Add warning about deprecated project.

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+
+## WARNING: this repository is deprecated since SquidGuard was discontinued.
+
 NAME
     SquidGuard Manager - Web GUI for SquidGuard and SquidClamav
     administration
